# METODOS_MATEMATICOS

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  _config.yml  _toc.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
Integral_Gaussiana/: 02-historico-gaussiana.md
_build/.doctrees/: README.doctree  environment.pickle
_build/.doctrees/Integral_Gaussiana/: 00_apresentacao.doctree  01-contexto-galton.doctree  02-historico-gaussiana.doctree  03-01-medidas.doctree  03-02-probabilidade.doctree  03-distribuicoes.doctree  04-integral-gaussiana.doctree  05-extensoes.doctree  06-funcao-gama.doctree  07-stirling.doctree  08-integral-ndimensoes.doctree
_build/_build/html/: README.html  genindex.html  index.html  objects.inv  (+3 more)
_build/html/: .buildinfo  README.html  genindex.html  objects.inv  prf-prf.html  search.html  searchindex.js
content/: README.md  _config.yml  _toc.yml
content/CAP_05/: CAP_05.md
content/CAP_06/: CAP_06.md
content/CAP_07/: CAP_07.md
content/CAP_14/: CAP_14.md
content/CAP_15/: CAP_15.md
data/: structure.yaml
livro/: README.md  _config.yml  _toc.yml  requirements.txt
livro/Integral_Gaussiana/: 00-Apresentacao  01-contexto-galton.md  03-01-medidas.md  03-distribuicoes.md
notebooks/: _toc.yaml  timeline.ipynb  toc.ipynb
notebooks/CAP_01/: galton.ipynb
notebooks/CAP_04/: CAP_04.md
notebooks/CAP_08/: CAP_08.md
notebooks/CAP_09/: CAP_09.md
notebooks/CAP_11/: CAP_11.md
src/: CAP_04.py  make_structure.ipynb  make_structure.py  make_toc.py  timeline.py
src/metodos_matematicos/: CAP_04.py
(+125 files in other folders)
