[project]
name = "metodos-matematicos"
version = "0.1.0"
description = ""
authors = [
    {name = "barosil",email = "luciano.barosi@professor.ufcg.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
